set chart color and legend layout

--- a/review/templates/review/dashproject.html
+++ b/review/templates/review/dashproject.html
@@ -41,6 +41,11 @@
 			title: {
 				text: 'Checklist Status'
 			},
+			colors: {{ chartinfo.colors|safe }},
+			legend: {
+				itemWidth: 150,
+				width: 150 * {{ chartinfo.reportstatus|length }},
+			},
 			xAxis: {
 				categories: {{ chartinfo.checklist|safe }}
 			},
